all set launch it

--- a/template/index.html
+++ b/template/index.html
@@ -31,7 +31,7 @@
     <div class="w3-third w3-container w3-black w3-large" style="height:250px;width:400px;">
       <h2>Contact Info</h2>
       <p><i class="fa fa-map-marker" style="width:30px"></i> India | Australia</p>
-      <p><i class="fa fa-phone" style="width:30px"></i> Email: harshilramani9777@gmail.com</p>
+      <p><i class="fa fa-envelope" style="width:30px"></i> Email: harshilramani9777@gmail.com</p>
       <p><i class="fa fa-envelope" style="width:30px"> </i> Email: ShubhamKhunt1872003@gmail.com</p>
     </div>
   </div>
