--- a/template/index.html
+++ b/template/index.html
@@ -22,7 +22,11 @@
     <br>
     <b>Shubham Khunt</b> 
     <a href="https://github.com/ShubhamKhunt1872003"><i class="w3-xlarge fa fa-github"></i></a>    <a href="https://www.linkedin.com/in/shubham-khunt/"><i class="w3-xlarge fa fa-linkedin"></i></a>
-    </pre>
+    <br>
+    <b>Archit Ghevariya</b> 
+    <a href="https://github.com/ArchitGhevariya007"><i class="w3-xlarge fa fa-github"></i></a>    <a href="hhttps://www.linkedin.com/in/architghevariya/"><i class="w3-xlarge fa fa-linkedin"></i></a>
+    
+  </pre>
 </div>
 <div class="w3-half w3-container w3-xlarge w3-text-grey">
  <code>
@@ -33,6 +37,7 @@
       <p><i class="fa fa-map-marker" style="width:30px"></i> India | Australia</p>
       <p><i class="fa fa-envelope" style="width:30px"></i> Email: harshilramani9777@gmail.com</p>
       <p><i class="fa fa-envelope" style="width:30px"> </i> Email: ShubhamKhunt1872003@gmail.com</p>
+      <p><i class="fa fa-envelope" style="width:30px"> </i> Email: ghevariyaarchit3@gmail.com</p>
     </div>
   </div>
  </code>
@@ -119,7 +124,7 @@
 </div>
 
 <div class="w3-container w3-text-grey">
-  <p>Powered by <a href="" target="_blank">Harshil & Shubham</a></p>
+  <p>Powered by <a href="" target="_blank">Harshil - Shubham - Archit</a></p>
 </div>
 
 </body>
